[package]
name = "log-report-layer"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
  "env-filter",
  "fmt",
] }
reqwest = { version = "0.12.5", features = ["blocking"] }
tokio = "1.13.9"
eyre = "0.6.12"

[dev-dependencies]
dotenv = "0.15.0"
